[package]
name = "loadtest"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
goose = "^0.17"
tokio = "^1.28"
goose-eggs = "^0.5"
rand = "^0.8.5"
reqwest = { version = "^0.11.10", features = ["socks"]}
